<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="303dp"
        android:layout_height="58dp"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="52dp"
        android:hint="@string/username"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/next"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginStart="162dp"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="180dp"
        android:background="@android:color/black"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:layout_marginTop="167dp"
        android:layout_marginBottom="66dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="303dp"
        android:layout_height="58dp"
        android:layout_marginBottom="39dp"
        android:hint="@string/Password"
        android:minHeight="48dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="303dp"
        android:layout_height="58dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="35dp"
        android:hint="@string/Confirmpassword"
        android:minHeight="48dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>