<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    tools:context=".second_register">

  <TextView
      android:id="@+id/textView"
      android:layout_width="156dp"
      android:layout_height="38dp"
      android:text="@string/registration"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="25sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.106" />

  <EditText
      android:id="@+id/editTextTextPersonName"
      android:layout_width="380dp"
      android:layout_height="47dp"
      android:ems="10"
      android:hint="@string/full_name"
      android:textColor="@color/black"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.463"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      app:layout_constraintVertical_bias="0.038" />

  <EditText
      android:id="@+id/editTextDate"
      android:layout_width="380dp"
      android:layout_height="47dp"
      android:ems="10"
      android:inputType="date"

      android:textColor="@color/white"
      android:hint="@string/date_of_birth"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
      app:layout_constraintVertical_bias="0.104" />

  <Spinner
      android:id="@+id/status"
      android:layout_width="wrap_content"
      android:layout_height="25dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.953"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextDate"
      app:layout_constraintVertical_bias="0.15" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="25dp"
      android:hint="@string/work_status"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.05"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextDate"
      app:layout_constraintVertical_bias="0.171" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="380dp"
      android:layout_height="49dp"
      android:layout_centerInParent="true"
      android:drawablePadding="16dp"
      android:hint="@string/select_hobbies"
      android:paddingTop="10dp"
      android:textSize="18sp"
      app:drawableRightCompat="@android:drawable/arrow_down_float"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:layout_constraintVertical_bias="0.144" />

  <Spinner
      android:id="@+id/why"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="80dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.915"
      app:layout_constraintStart_toEndOf="@+id/textView4"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      app:layout_constraintVertical_bias="0.205" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/why_"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.066"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      app:layout_constraintVertical_bias="0.182" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/why"
      app:layout_constraintVertical_bias="0.397" />

//ok
</androidx.constraintlayout.widget.ConstraintLayout>
